tests/cases/ffi/errors/c-header-target-aggregate-by-value.ari
@repr(C)
pub struct ApiPair {
  left: i64,
  right: i64,
}

@export("ari_take_pair")
pub fn take_pair(pair: ApiPair) -> i64 {
  return pair.left + pair.right;
}
